# petrolib

./: .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml
docs/: CNAME  conf.py  index.rst  modules.rst  overview.rst  petrolib.rst  quickstart.rst  requirements.txt  requirements.yml
docs/_build/doctrees/: environment.pickle  file_reader.doctree  index.doctree  interp.doctree  modules.doctree  overview.doctree  petrolib.doctree  plots.doctree  procs.doctree  quickstart.doctree  stats.doctree  tutorial.doctree  util.doctree  workflow.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  overview.html  petrolib.html  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorial.html
docs/_build/html/_modules/: index.html  interp.html  plots.html  procs.html  stats.html  utils.html  workflow.html
docs/_build/html/_modules/petrolib/: file_reader.html  interp.html  plots.html  procs.html  stats.html  utils.html  workflow.html
docs/_build/html/_sources/: file_reader.rst.txt  index.rst.txt  interp.rst.txt  modules.rst.txt  plots.rst.txt  procs.rst.txt  stats.rst.txt  tutorial.rst.txt  util.rst.txt  workflow.rst.txt
gallery/: Picket plot.ipynb  Triplecombo+Zonation+Facies.ipynb  how to read file.ipynb  triplecombo.ipynb  zone info.ipynb
src/petrolib/: __init__.py  file_reader.py  interp.py  plots.py  procs.py  stats.py  utils.py  workflow.py
src/petrolib/data/: file_reader.py  litho_info.csv  procs.py  stats.py
src/petrolib/petro/: workflow.py
src/petrolib/visualization/: interp.py  plot.py
tutorials/: test.ipynb
